<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".presentation.fragment.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_header"
            android:layout_marginBottom="8dp"
            style="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toTopOf="@id/welcome_short_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/welcome_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_main_text"
            android:layout_marginBottom="16dp"
            style="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/onboarding_continue_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_header" />

        <Button
            android:id="@+id/onboarding_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/_continue"
            android:textColor="@color/cardview_light_background"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>