<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeDetail"
            type="com.udacity.shoestore.domain.models.Shoe" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".presentation.fragment.ShoeDetailFragment">

            <TextView
                android:id="@+id/shoe_detail_company_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/shoe_detail_company"
                android:text="@string/shoe_detail_company"
                app:layout_constraintBottom_toTopOf="@+id/shoe_detail_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/shoe_detail_company"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:text="@{shoeDetail.company}"
                app:layout_constraintBottom_toTopOf="@+id/shoe_detail_name_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_company_tv" />

            <TextView
                android:id="@+id/shoe_detail_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/shoe_detail_name"
                android:text="@string/shoe_detail_name"
                app:layout_constraintBottom_toTopOf="@+id/shoe_detail_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_company" />

            <EditText
                android:id="@+id/shoe_detail_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:text="@{shoeDetail.name}"
                app:layout_constraintBottom_toTopOf="@+id/shoe_detail_size_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_name_tv" />

            <TextView
                android:id="@+id/shoe_detail_size_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/shoe_detail_size"
                android:text="@string/shoe_detail_size"
                app:layout_constraintBottom_toTopOf="@+id/shoe_detail_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_name" />

            <EditText
                android:id="@+id/shoe_detail_size"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintBottom_toTopOf="@+id/shoe_detail_description_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_size_tv"
                app:shoeSize="@{shoeDetail.size}" />

            <TextView
                android:id="@+id/shoe_detail_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/shoe_detail_description"
                android:text="@string/shoe_detail_description"
                app:layout_constraintBottom_toTopOf="@+id/shoe_detail_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_size" />

            <EditText
                android:id="@+id/shoe_detail_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="3"
                android:text="@{shoeDetail.description}"
                app:layout_constraintBottom_toTopOf="@id/shoe_detail_save_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoe_detail_description_tv" />

            <Button
                android:id="@+id/shoe_detail_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/save"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toTopOf="@id/shoe_detail_cancel_button"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/shoe_detail_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:text="@string/cancel"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>